# rl-MEC-scheduler

./: .gitignore  Makefile  experiments.ipynb  pyproject.toml
docs/: cover.aux  cover.tex  dissertion.acn  dissertion.acr  dissertion.alg  dissertion.aux  dissertion.bbl  dissertion.blg  dissertion.fdb_latexmk  dissertion.fls  dissertion.ist  dissertion.out  dissertion.tex  dissertion.toc  glossary.tex  main.tex  variables.tex
docs/bibliography/: references.bib
docs/chapters/: Methodology.tex  abstract.tex  acronyms.tex  declaration.tex  introduction.tex  planification.tex  relatedwork.tex  results.tex  resumo.tex  solution.tex
docs/dissertation/: .latexmkrc  cover.aux  cover.tex  dissertion.acn  dissertion.acr  dissertion.alg  dissertion.aux  dissertion.bbl  dissertion.blg  dissertion.fdb_latexmk  dissertion.fls  dissertion.glg  dissertion.ist  dissertion.out  dissertion.toc  variables.tex
docs/extended_summary/: Acronyms.tex  Thesis_Conference.aux  Thesis_Conference.fdb_latexmk  Thesis_Conference.fls  Thesis_Conference.tex
experiments/: experiments.ipynb
experiments/env_configs/: env_5_100_1_0_configs.json  env_5_100_configs.json  env_5_10_0.25_0.75_configs.json  env_5_10_0.5_0.5_configs.json  env_5_10_0.75_0.25_configs.json  env_5_10_0_1_configs.json  env_5_10_1_0_configs.json  env_5_10_1_0_heterogenous_configs.json  env_5_10_1_0_new_network_configs.json  env_5_10_configs.json  env_5_20_1_0_configs.json  env_5_20_configs.json  env_5_50_1_0_configs.json  env_5_5_configs.json  (+2 more)
rl-MEC-scheduler/: dqn.py  replay_buffer.py
rl_MEC_scheduler/: ppo_taxi_example.py
(+24 files in other folders)
