[tool.poetry]
name = "rl_MEC_scheduler"
version = "0.0.1"
description = ""
authors = ["Carlos-Marques <carlosmarques.personal@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
ray = {extras = ["default", "rllib"], version = "^1.12.0"}
tensorflow = "^2.8.0"
gym = {extras = ["atari", "accept-rom-license"], version = "<0.22"}
GPUtil = "^1.4.0"
plotly = "^5.7.0"
nbformat = "^5.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest = "^7.1.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
